--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines -->
+    <meta name="description" content="Fun Running: Your Ultimate Guide to Running Hobby. Tips, gear, and inspiration for runners of all levels." />
+    <meta name="keywords" content="Running, Jogging, Trail running, Marathon, Fitness, Training, Shoes, Gear, Endurance, Health"/>
     <!-- Title -->
     <title>Fun Running</title>
     <!-- Favicon -->
