add logo to main page and applied Oswald font to it

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
     <meta name="description" content="Fun Running: Your Ultimate Guide to Running Hobby. Tips, gear, and inspiration for runners of all levels." />
-    <meta name="keywords" content="Running, Jogging, Trail running, Marathon, Fitness, Training, Shoes, Gear, Endurance, Health"/>
+    <meta name="keywords" content="Running, Jogging, Trail running, Marathon, Fitness, Training, Shoes, Gear, Endurance, Health" />
     <!-- Title -->
     <title>Fun Running</title>
     <!-- Favicon -->
@@ -15,7 +15,11 @@
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-    <header>Header</header>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Fun Running</h1>
+        </a>
+    </header>
     <main>Main content</main>
     <footer>Footer</footer>
 </body>
