--- a/index.html
+++ b/index.html
@@ -26,10 +26,20 @@
                 <li><a href="" class="active">Home</a></li>
                 <li><a href="">Gallery</a></li>
                 <li><a href="">Sign Up</a></li>
-            </ul>    
+            </ul>
         </nav>
     </header>
     <main>Main content</main>
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in new tab)"></a></li>
+            <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in new tab)"></a></li>
+            <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in new tab)"></a></li>
+        </ul>
+    </footer>
+
+    <!-- Font Awsome kit-->
+    <script src="https://kit.fontawesome.com/892da5f36e.js" crossorigin="anonymous"></script>
 </body>
 </html>
