--- a/signup.html
+++ b/signup.html
@@ -23,9 +23,9 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
         </nav>
     </header>
@@ -33,17 +33,22 @@
     <footer>
         <ul id="social-networks">
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" 
+                <a href="https://facebook.com" target="_blank" rel="noopener"
                    aria-label="Visit our Facebook page (opens in new tab)">
-                <i class="fa-brands fa-facebook"></i></a>
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
             </li>
-            <li><a href="https://twitter.com" target="_blank" rel="noopener" 
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
                    aria-label="Visit our Twitter page (opens in new tab)">
-                <i class="fa-brands fa-twitter"></i></a>
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
             </li>
-            <li><a href="https://youtube.com" target="_blank" rel="noopener" 
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
                    aria-label="Visit our Youtube page (opens in new tab)">
-                <i class="fa-brands fa-youtube"></i></a>
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
             </li>
             <li>
                 <a href="https://instagram.com" target="_blank" rel="noopener"
