--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
         </nav>
     </header>
     <main>
-        <section id="hero"></section>
+        <section id="hero">
+            <div id="cover-text">
+                <h2>Fun Running</h2>
+                <h3>Kilmacow, Co. Kilkenny</h3>
+            </div>
+        </section>
     </main>
     <footer>
         <ul id="social-networks">
