--- a/index.html
+++ b/index.html
@@ -63,23 +63,33 @@
                         <p>When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or low mood, and inspire you to try new events.</p>
                     </div>
                 </div>
+                <div id="benefits-image">
+                    <div id="circle-cover-bg">
+
+                    </div>
+                </div>
             </div>
         </section>
     </main>
     <footer>
         <ul id="social-networks">
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" 
+                <a href="https://facebook.com" target="_blank" rel="noopener"
                    aria-label="Visit our Facebook page (opens in new tab)">
-                <i class="fa-brands fa-facebook"></i></a>
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
             </li>
-            <li><a href="https://twitter.com" target="_blank" rel="noopener" 
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
                    aria-label="Visit our Twitter page (opens in new tab)">
-                <i class="fa-brands fa-twitter"></i></a>
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
             </li>
-            <li><a href="https://youtube.com" target="_blank" rel="noopener" 
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
                    aria-label="Visit our Youtube page (opens in new tab)">
-                <i class="fa-brands fa-youtube"></i></a>
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
             </li>
             <li>
                 <a href="https://instagram.com" target="_blank" rel="noopener"
