--- a/index.html
+++ b/index.html
@@ -70,6 +70,48 @@
                 </div>
             </div>
         </section>
+
+        <!-- Meetups section-->
+        <section id="meetups">
+            <div id="times">
+                <h2>Meet-ups Time</h2>
+                <div>
+                    <h3>Urban <i class="fa-solid fa-city"></i></h3>
+                    <p>Monday</p>
+                    <p>5K</p>
+                    <p>Kilmacow Community Hall</p>
+                    <p>18-30<p>
+                </div>
+                <div>
+                    <h3>Trail <i class="fa-solid fa-tree"></i></h3>
+                    <p>Tuesday</p>
+                    <p>10K</p>
+                    <p>Kilmacow Sports Complex</p>
+                    <p>9-30</p>
+                </div>
+                <div>
+                    <h3>Urban <i class="fa-solid fa-city"></i></h3>
+                    <p>Wednesday</p>
+                    <p>5K</p>
+                    <p>Kilmacow Community Hall</p>
+                    <p>18-30</p>
+                </div>
+                <div>
+                    <h3>Trail <i class="fa-solid fa-tree"></i></h3>
+                    <p>Friday</p>
+                    <p>10K</p>
+                    <p>Kilmacow Sports Complex</p>
+                    <p>9-30</p>
+                </div>
+                <div>
+                    <h3>Coffee <i class="fa-solid fa-mug-hot"></i></h3>
+                    <p>Saturday</p>
+                    <p>0K</p>
+                    <p>The Foxes Den</p>
+                    <p>12-00</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <ul id="social-networks">
