Hide meetups heading

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <!-- Meetups section-->
         <section id="meetups">
-            <h2>Meet-ups Time</h2>
+            <h2 class="hidden-heading">Meet-ups Time</h2>
             <div id="times">
 
                 <div>
