--- a/signup.html
+++ b/signup.html
@@ -29,7 +29,34 @@
             </ul>
         </nav>
     </header>
-    <main>Main content</main>
+    <main>
+        <section id="signup">
+            <form action="https://formdump.codeinstitute.net" method="post" id="signup-form">
+                <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you Signed up!'</h2>
+                <label for="first-name">First Name</label>
+                <input type="text" id="first-name" class="text-input" name="first-name" required /><br />
+                <label for="first-name">Last Name</label>
+                <input type="text" id="last-name" class="text-input" name="last-name" required /><br />
+                <label for="first-name">Email Address</label>
+                <input type="text" id="email-address" class="text-input" name="email-address" required /><br />
+                <div class="radio-buttons">
+                    <div>
+                        <label for="road">Road</label>
+                        <input type="radio" id="road" name="running-preference" value="road" required checked />
+                    </div>
+                    <div>
+                        <label for="trail">Trail</label>
+                        <input type="radio" id="trail" name="running-preference" value="trail" required />
+                    </div>
+                    <div>
+                        <label for="both">Both</label>
+                        <input type="radio" id="both" name="running-preference" value="both"  required />
+                    </div>
+                </div>
+                <button type="submit" class="join-button">Let's Run!</button>
+            </form>
+        </section>
+    </main>
     <footer>
         <ul id="social-networks">
             <li>
