--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@
                 <label for="first-name">Last Name</label>
                 <input type="text" id="last-name" class="text-input" name="last-name" required /><br />
                 <label for="first-name">Email Address</label>
-                <input type="text" id="email-address" class="text-input" name="email-address" required /><br />
+                <input type="email" id="email-address" class="text-input" name="email-address" required /><br />
                 <div class="radio-buttons">
                     <div>
                         <label for="road">Road</label>
